k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microbin
  namespace: default
  annotations:
    metallb.universe.tf/address-pool: k3s-pool
    metallb.universe.tf/allow-shared-ip: "true"
spec:
  type: LoadBalancer
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: microbin
  externalTrafficPolicy: Local
